---
source: typegraph/core/src/runtimes/prisma/relationship/mod.rs
expression: reg
---
RelationshipRegistry {
    models: {
        Type#4: RegisteredModel {
            relationships: {
                "profile": "__rel_User_Profile_1",
            },
            name: "User",
            id_field: "id",
        },
        Type#8: RegisteredModel {
            relationships: {
                "user": "__rel_User_Profile_1",
            },
            name: "Profile",
            id_field: "id",
        },
    },
    models_by_name: {},
    relationships: {
        "__rel_User_Profile_1": Relationship {
            name: "__rel_User_Profile_1",
            left: RelationshipModel {
                model_type: Type#8,
                model_name: "Profile",
                wrapper_type: Type#3,
                cardinality: Optional,
                field: "user",
            },
            right: RelationshipModel {
                model_type: Type#4,
                model_name: "User",
                wrapper_type: Type#7,
                cardinality: Optional,
                field: "profile",
            },
        },
    },
    complete_registrations: {
        Type#4,
        Type#8,
    },
    counter: RefCell {
        value: 1,
    },
}
